--- a/src/components/ToDoItem/ToDoItem.module.css
+++ b/src/components/ToDoItem/ToDoItem.module.css
@@ -1,8 +1,14 @@
 .to-do-item {
     display: flex;
 }
+.button {
+    width: 50px;
+    height: 25;
+}
 .start {
-    margin-left: 6px;
+}
+.stop {
+    margin-left: 8px;
     margin-right: 8px;
 }
 .description {
